--- a/notebooks/3. Modeling plus SMOTE and MLFlow.ipynb
+++ b/notebooks/3. Modeling plus SMOTE and MLFlow.ipynb
@@ -41,10 +41,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "b27ff04f-c518-4c49-b507-c24109b7c1b3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.9/site-packages/pydantic/_internal/_fields.py:149: UserWarning: Field \"model_server_url\" has conflict with protected namespace \"model_\".\n",
+      "\n",
+      "You may be able to resolve this warning by setting `model_config['protected_namespaces'] = ()`.\n",
+      "  warnings.warn(\n",
+      "/opt/conda/lib/python3.9/site-packages/pydantic/_internal/_config.py:321: UserWarning: Valid config keys have changed in V2:\n",
+      "* 'schema_extra' has been renamed to 'json_schema_extra'\n",
+      "  warnings.warn(message, UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import mlflow\n",
     "import pandas as pd\n",
@@ -485,7 +499,7 @@
     }
    ],
    "source": [
-    "data = pd.read_csv(\"../data/telco_customer_churn_1.csv\")\n",
+    "data = pd.read_csv(\"../data/input_data/telco_customer_churn_1.csv\")\n",
     "data"
    ]
   },
@@ -678,7 +692,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022/12/27 12:39:23 INFO mlflow.tracking.fluent: Experiment with name 'churn-prediction10' does not exist. Creating a new experiment.\n"
+      "2023/11/29 12:33:35 INFO mlflow.tracking.fluent: Experiment with name 'churn-prediction10' does not exist. Creating a new experiment.\n"
      ]
     },
     {
@@ -686,7 +700,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Active run_id: c56f925413b04f5f94c0a4df5b724e97\n",
+      "Active run_id: 8e4e7aac648341f1a942587f4453dcf3\n",
       "CV accuracy: 0.78, Test accuracy: 0.76\n",
       "CV f1: 0.78, Test f1: 0.61\n"
      ]
@@ -755,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "25657a69-1882-4909-a260-c98109fb82a5",
    "metadata": {},
    "outputs": [
@@ -764,8 +778,8 @@
      "output_type": "stream",
      "text": [
       "Registered model 'logistic_regression_model' already exists. Creating a new version of this model...\n",
-      "2022/12/27 12:39:56 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: logistic_regression_model, version 6\n",
-      "Created version '6' of model 'logistic_regression_model'.\n"
+      "2023/11/29 12:33:49 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: logistic_regression_model, version 2\n",
+      "Created version '2' of model 'logistic_regression_model'.\n"
      ]
     }
    ],
@@ -775,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "ca4ca478-60f8-488b-b0a9-f7d1d0b5b96a",
    "metadata": {},
    "outputs": [],
@@ -802,25 +816,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "f8d1c227-8a54-4e9f-a61d-531c934e8269",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0 1 1 ... 0 0 0]\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6d5f126a4f6c4f2085adaae653a14e3c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading artifacts:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 1, ..., 0, 0, 0])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load a model and predict\n",
     "# The following command should be a comment if run by docker-compose\n",
     "# mlflow.set_tracking_uri('http://127.0.0.1:5000')model_name = \"logistic_regression_model\"\n",
-    "version = \"6\"\n",
+    "version = \"2\"\n",
     "my_clf = mlflow.pyfunc.load_model(f\"models:/{MODEL_NAME}/{version}\")\n",
-    "print(my_clf.predict(X_test))"
+    "result = my_clf.predict(X_test)\n",
+    "result"
    ]
   },
   {
