--- a/notebooks/2. Modeling and MLFlow.ipynb
+++ b/notebooks/2. Modeling and MLFlow.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "db1c3000-85e9-45d8-b461-87fc4efcbe10",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b27ff04f-c518-4c49-b507-c24109b7c1b3",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d4430fb8-d91a-4143-b06d-9c029125559e",
    "metadata": {},
    "outputs": [
@@ -509,7 +509,7 @@
        "[6000 rows x 21 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "ceadeb33-c771-4374-8b4c-974cfba77133",
    "metadata": {
     "tags": []
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "cd419ae1-f2ef-486d-b279-55ea14838a39",
    "metadata": {},
    "outputs": [],
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "30d62176-21fe-4cad-a761-aac642193546",
    "metadata": {
     "tags": []
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "f37432b4-8f6d-48d4-bc77-a37b028db8ae",
    "metadata": {},
    "outputs": [],
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "23b38f48-e281-4f7c-a1e4-bc4aab6e03db",
    "metadata": {},
    "outputs": [],
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "87c44b4c-d47a-4426-8bda-e515ad106a66",
    "metadata": {},
    "outputs": [],
@@ -666,18 +666,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "0ec3eb74-976d-4512-9806-2bb969725f6b",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023/11/29 14:41:03 INFO mlflow.tracking.fluent: Experiment with name 'churn-prediction' does not exist. Creating a new experiment.\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
-      "Active run_id: 13c9c100e7594cbaa18a442c04224582\n",
+      "Active run_id: 7e2daccb2a264ed3815c6a5af5b95692\n",
       "CV accuracy: 0.80, Test accuracy: 0.79\n",
       "CV f1: 0.72, Test f1: 0.56\n"
      ]
@@ -686,8 +693,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/opt/conda/lib/python3.9/site-packages/_distutils_hack/__init__.py:30: UserWarning: Setuptools is replacing distutils.\n",
+      "  warnings.warn(\"Setuptools is replacing distutils.\")\n",
       "Successfully registered model 'logistic_regression_model'.\n",
-      "2023/11/29 12:32:20 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: logistic_regression_model, version 1\n",
+      "2023/11/29 14:41:11 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: logistic_regression_model, version 1\n",
       "Created version '1' of model 'logistic_regression_model'.\n"
      ]
     }
@@ -742,15 +751,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "f8d1c227-8a54-4e9f-a61d-531c934e8269",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "86b53bf8ca524a51b600b73d27d289fa",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading artifacts:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 1 ... 0 0 0]\n"
+     ]
+    }
+   ],
    "source": [
     "# Load a model and predict\n",
-    "mlflow.set_tracking_uri('http://127.0.0.1:5000')\n",
+    "mlflow.set_tracking_uri('http://host.docker.internal:5001')\n",
     "_model_name = \"logistic_regression_model\"\n",
-    "version = \"11\"\n",
+    "version = \"1\"\n",
     "my_clf = mlflow.pyfunc.load_model(f\"models:/{MODEL_NAME}/{version}\")\n",
     "print(my_clf.predict(X_test))"
    ]
